2016-11-07  Carl Hetherington  <cth@carlh.net>

	* Updated da_DK translation from Anders Uhl Pedersen.

2016-10-31  c.hetherington  <cth@carlh.net>

	* Fix failure to resume encodes when using encryption (#980).

2016-10-29  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2016-10-28  Carl Hetherington  <cth@carlh.net>

	* Updated it_IT translation from Fabio "Zak" Belli.

2016-10-26  Carl Hetherington  <cth@carlh.net>

	* Updated es_ES translation from Manuel AC.

	* Updated sv_SE translation from Adam Klotblixt.

2016-10-25  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2016-10-24  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.38 released.

2016-10-24  Carl Hetherington  <cth@carlh.net>

	* Fix more problems with 3D alternate-frame
	sources.

	* Allow creation of >60fps 3D DCPs.

	* Fix over-fussy parsing of times from subtitles
	files in some cases.

	* Fix repeated subtitles in some cases.

2016-10-19  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.37 released.

2016-10-19  Carl Hetherington  <cth@carlh.net>

	* Fix various problems with 3D DCP creation
	from 3D DCP and 3D-alternate-frame sources.

2016-10-18  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2016-10-17  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.36 released.

2016-10-17  c.hetherington  <cth@carlh.net>

	* Bump libdcp for fix to corrupted audio analyses
	under some locales (#974).

2016-10-15  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.35 released.

2016-10-14  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.34 released.

2016-10-12  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.33 released.

2016-10-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.32 released.

2016-10-10  Carl Hetherington  <cth@carlh.net>

	* Fix incorrect import of multi-reel DCPs with subtitles.

2016-10-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.31 released.